# camphr

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  .grenrc.yml  .pre-commit-config.yaml  =0.1.1  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  TODO.md  __init__.pyi  _ml.pyi  about.pyi  docker-compose.yml  f.ipynb  fail.json  gold.pyi  language.pyi  nohup.out  pyproject.toml  pyrightconfig.json  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test  test.py  test.sh  test_all.py  test_docker.py  test_local.sh  util.pyi  versionup.py  vocab.pyi
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
bedoner/: .gitignore  VERSION.py  __init__.py  cli.py  consts.py  errors.py  models.py  torch_utils.py  trf_utils.py  types.py  utils.py  wordpiecer.py
camphr/: VERSION.py  __init__.py  consts.py  doc.py  errors.py  language.py  models.py  nlp.py  pipe.py  serde.py  torch_utils.py  trf_utils.py  utils.py
cli/: __init__.pyi  download.pyi  evaluate.pyi  info.pyi  init_model.pyi  link.pyi  package.pyi  pretrain.pyi  train.pyi
data/: udify
displacy/: __init__.pyi
dockerfiles/: Dockerfile  Dockerfile.base  Dockerfile.juman  Dockerfile.mecab  Dockerfile.sentencepiece
docs/: Makefile  README.md  build-push.sh  requirements.txt
lang/: lex_attrs.pyi  norm_exceptions.pyi
matcher/: __init__.pyi  matcher.pyi
ml/: __init__.pyi  tok2vec.pyi
models/: README.md  list.md  models-v0.4.txt  models_v0.4.0.dev.txt
ner_labels/: ontonotes.yml  sekine.yml  wikipedia.yml
pipeline/: __init__.pyi  entityruler.pyi  functions.pyi  hooks.pyi  pipes.pyi
scripts/: .gitignore  bccwj2jsonl.py  bertner_packaging.ipynb  change_lang_cls.py  convert-ene-gold.py  create_vocab.py  download_model.py  ene2irexmap.json  eval.py  eval_triplener.py  foo.py  getting_started.ipynb  output.ipynb  packaging.ipynb  packaging.py  packaging_nlp.py  patch_torchlang.py  preprocess-ner.ipynb  setup.mecab_template.py  split_gold.py  test-package.sh  test.sh  test_all.py  test_package.py  test_train.py  train.ipynb  train.py  train_multiner.py  train_triplener.py  (+4 more)
spacy/: _ml.pyi  (+3 more)
subpackages/camphr_cli/: pyproject.toml  pyrightconfig.json  setup.cfg
subpackages/camphr_cli/camphr_cli/: __main__.py  config.py  train.py  utils.py
subpackages/camphr_cli/camphr_cli/conf/train/: config.yaml
subpackages/camphr_cli/tests/: conftest.py  test_main.py  test_split_gold.py  test_train.py  utils.py
subpackages/camphr_cli/tests/fixtures/: gen_ner.py  irex.json
subpackages/camphr_cli/tests/fixtures/bert-test/: config.json
subpackages/camphr_cli/tests/fixtures/confs/trf_train/: ner.yml
subpackages/camphr_cli/tests/fixtures/xlnet/: special_tokens_map.json
subpackages/camphr_core/: pyproject.toml  pyrightconfig.json
subpackages/camphr_core/camphr_core/: consts.py  doc.py  utils.py
subpackages/camphr_core/camphr_core/lang/: torch.py
subpackages/camphr_core/camphr_core/lang/juman/: __init__.py
subpackages/camphr_core/camphr_core/lang/mecab/: __init__.py  tag_map.py
subpackages/camphr_core/camphr_core/ner_labels/: labels_ene.py  labels_ontonotes.py  utils.py
subpackages/camphr_core/tests/: conftest.py  doc.py  test_factories.py  test_torch_utils.py  test_utils.py  test_utils_pipeline.py  utils.py
subpackages/camphr_core/tests/lang/: test_torch.py
subpackages/camphr_core/tests/lang/juman/: test_lang.py  test_lemmatization.py  test_tokenizer.py
subpackages/camphr_core/tests/lang/mecab/: test_lemmatization.py  test_tokenizer.py
subpackages/camphr_core/tests/lang/sentencepiece/: test_sentencepiecelang.py
subpackages/camphr_core/tests/ner_labels/: test_utils.py
subpackages/camphr_embedrank/: pyproject.toml  pyrightconfig.json
subpackages/camphr_embedrank/camphr_embedrank/: embedrank.py
subpackages/camphr_embedrank/tests/: test_embedrank.py
subpackages/camphr_knp/: pyproject.toml
subpackages/camphr_knp/camphr_knp/: __init__.py  dependency_parser.py  noun_chunker.py
subpackages/camphr_knp/tests/: test_dependency_parser.py  test_noun_chunker.py  utils.py
subpackages/camphr_lang/: README.md  docker-compose.yml  pyproject.toml  setup.cfg
subpackages/camphr_lang/camphr_lang/juman/: __init__.py
subpackages/camphr_lang/camphr_lang/mecab/: __init__.py
subpackages/camphr_lang/camphr_lang/sentencepiece/: __init__.py
subpackages/camphr_lang/dockerfiles/: Dockerfile.juman  Dockerfile.mecab  Dockerfile.sentencepiece
subpackages/camphr_lang/scripts/: test.sh
subpackages/camphr_lang/tests/: conftest.py
subpackages/camphr_lang/tests/juman/: test_lang.py  test_tokenizer.py
subpackages/camphr_lang/tests/sentencepiece/: test_sentencepiecelang.py
subpackages/camphr_pipelines/: pyproject.toml  pyrightconfig.json
subpackages/camphr_pipelines/camphr_pipelines/: models.py
subpackages/camphr_pipelines/camphr_pipelines/model_config/: knp.yml
subpackages/camphr_pipelines/tests/: conftest.py  test_models.py  test_transformers.py  utils.py
subpackages/camphr_pipelines/tests/fixtures/bert-base-japanese-test/: config.json
subpackages/camphr_pipelines/tests/fixtures/bert-test/: vocab.txt
subpackages/camphr_test/: pyproject.toml  pyrightconfig.json
subpackages/camphr_test/camphr_test/: utils.py
subpackages/camphr_torch/: pyproject.toml  setup.cfg
subpackages/camphr_torch/camphr_torch/: lang.py  utils.py
subpackages/camphr_torch/tests/: conftest.py  test_lang.py  test_packaging.py  test_utils.py
subpackages/camphr_transformers/: foo.py  mypy.ini  pyproject.toml  pyrightconfig.json
subpackages/camphr_transformers/camphr_transformers/: __init__.py  maskedlm.py  model.py  ner.py  seq_classification.py  tokenizer.py  utils.py
subpackages/camphr_transformers/tests/: conftest.py  test_maskedlm.py  test_model.py  test_ner.py  test_seq_classification.py  test_tokenizer.py  utils.py
subpackages/camphr_transformers/tests/fixtures/: spiece_words.txt
subpackages/camphr_transformers/tests/fixtures/ner_bert/: vocab.txt
subpackages/camphr_transformers/tests/fixtures/xlnet/: tokenizer_config.json
(+403 files in other folders)
