[metadata]
version = v0.4.0.dev6
name = bedoner
home-page = https://github.com/PKSHATechnology/bedore-ner
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires = 
	setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires = 
	spacy-transformers
	typing-extensions
	pyyaml
	regex
	jaconv
	fire
	pandas
	mojimoji

[tool:pytest]
testpaths = tests
xfail_strict = true

[options.entry_points]
spacy_languages = 
	juman = bedoner.lang.juman:Japanese
	mecab = bedoner.lang.mecab:Japanese
	knp = bedoner.lang.knp:Japanese
	sentencepiece = bedoner.lang.sentencepiece:SentencePieceLang
	torch_juman = bedoner.lang.juman:TorchJapanese
	torch_mecab = bedoner.lang.mecab:TorchJapanese
	torch_knp = bedoner.lang.knp:TorchJapanese
	torch_sentencepiece = bedoner.lang.sentencepiece:TorchSentencePieceLang
spacy_factories = 
	knp_entity_extractor = bedoner.pipelines.knp_ner:KnpEntityExtractor
	wordpiecer = bedoner.pipelines.wordpiecer:WordPiecer
	trf_sentencepiecer = bedoner.pipelines.wordpiecer:TrfSentencePiecer
	bert_ner = bedoner.pipelines.trf_ner:BertForNamedEntityRecognition
	bert = bedoner.pipelines.trf_model:BertModel
	udify = bedoner.pipelines.udify:Udify

[flake8]
max-line-length = 120
exclude = .git, __pycache__, build, scripts,
doctests = False
ignore = E203,W503,E501

[versionup]
files = bedoner/VERSION.py
tag = True
commit = True

