[metadata]
version = v0.4.0
name = bedoner
home-page = https://github.com/PKSHATechnology/bedore-ner
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires =
	setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
	spacy-transformers
	typing-extensions
	pyyaml
	regex
	jaconv
	fire
	pandas
	mojimoji
	allennlp @ git+https://github.com/tamuhey/allennlp@patch/spacy-2.2
	pyahocorasick
	catalogue

[tool:pytest]
testpaths = tests
xfail_strict = true

[tool:isort]
skip = .venv/**/*.py
line_length = 88
multi_line_output = 3
include_trailing_comma = True

[options.entry_points]
spacy_languages =
	juman = bedoner.lang.juman:Japanese
	mecab = bedoner.lang.mecab:Japanese
	knp = bedoner.lang.knp:Japanese
	sentencepiece = bedoner.lang.sentencepiece:SentencePieceLang
	torch_juman = bedoner.lang.juman:TorchJapanese
	torch_mecab = bedoner.lang.mecab:TorchJapanese
	torch_knp = bedoner.lang.knp:TorchJapanese
	torch_sentencepiece = bedoner.lang.sentencepiece:TorchSentencePieceLang
spacy_factories =
	knp_entity_extractor = bedoner.pipelines.knp_ner:KnpEntityExtractor
	wordpiecer = bedoner.pipelines.wordpiecer:WordPiecer
	bert_ner = bedoner.pipelines.trf_ner:BertForNamedEntityRecognition
	bert = bedoner.pipelines.trf_model:BertModel
	udify = bedoner.pipelines.udify:Udify
	elmo = bedoner.pipelines.elmo:Elmo

[flake8]
max-line-length = 120
exclude = .git, __pycache__, build, scripts,
doctests = False
ignore = E203,W503,E501

[versionup]
files = bedoner/VERSION.py
tag = True
commit = True

