[metadata]
version = v0.4.1
name = bedoner
home-page = https://github.com/PKSHATechnology/bedore-ner
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires = 
	setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires = 
	spacy-transformers
	typing-extensions
	pyyaml
	fire
	pyahocorasick
	catalogue
    overrides
	gensim
	scikit-learn
	cytoolz
	more-itertools

[options.extras_require]
allennlp = 
	allennlp @ git+https://github.com/allenai/allennlp
juman = 
	mojimoji
	pyknp @ git+https://github.com/ku-nlp/pyknp
mecab = 
	mecab-python3

[tool:pytest]
testpaths = tests
xfail_strict = true

[tool:isort]
skip = .venv/**/*.py
line_length = 88
multi_line_output = 3
include_trailing_comma = True

[options.entry_points]
spacy_languages = 
	juman = bedoner.lang.juman:Japanese
	mecab = bedoner.lang.mecab:Japanese
	sentencepiece = bedoner.lang.sentencepiece:SentencePieceLang
	torch_juman = bedoner.lang.juman:TorchJapanese
	torch_mecab = bedoner.lang.mecab:TorchJapanese
	torch_knp = bedoner.lang.knp:TorchJapanese
	torch_sentencepiece = bedoner.lang.sentencepiece:TorchSentencePieceLang
spacy_factories = 
	transformers_wordpiecer = bedoner.pipelines.wordpiecer:WordPiecer
	transformers_sentencepiecer = bedoner.pipelines.wordpiecer:TrfSentencePiecer
	bert_ner = bedoner.pipelines.trf_ner:BertForNamedEntityRecognition
	xlnet_ner = bedoner.pipelines.trf_ner:XLNetForNamedEntityRecognition
	bert_seq_classifier = bedoner.pipelines.trf_seq_classification:BertForSequenceClassification
	xlnet_seq_classifier = bedoner.pipelines.trf_seq_classification:XLNetForSequenceClassification
	bert = bedoner.pipelines.trf_model:BertModel
	xlnet = bedoner.pipelines.trf_model:XLNetModel
	elmo = bedoner.pipelines.elmo:Elmo

[flake8]
max-line-length = 120
exclude = .git, __pycache__, build, scripts,
doctests = False
ignore = E203,W503,E501

[versionup]
files = bedoner/VERSION.py
tag = True
commit = True

