[tool.poetry]
name = "camphr_cli"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
hydra-core = "0.11.3"
scikit-learn = ">=0.22,<0.25"

# TODO
camphr_pipelines = {path = "../camphr_pipelines", develop=true}

[tool.poetry.dev-dependencies]
camphr_test = {path = "../camphr_test", develop=true}
pytest = "^6.2.4"
mypy = "^0.812"
flake8 = "^3.9.2"

[tool.poetry.extras]

[tool.poetry.scripts]
camphr = "camphr_cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
