[build-system]
requires = [ "poetry>=1.0.0",]
build-backend = "poetry.masonry.api"

[tool.versionup]
files = [ "camphr_core/VERSION.py",]
commit = true

[tool.poetry]
version = "0.1.0"
name = "camphr_core"
authors = [ "tamuhey <tamuhey@gmail.com>",]
description = ""
license = "Apache-2.0"
homepage = "https://github.com/PKSHATechnology-Research/camphr"
repository = "https://github.com/PKSHATechnology-Research/camphr"
keywords = []

[tool.isort]
skip = ".venv/**/*.py"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = "camphr"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = ">=3.7.4"
spacy = ">=2.2,<=2.3.5"
more-itertools = "^8.7.0"
PyYAML = "^5.4.1"

[tool.poetry.extras]
all = [ "sentencepiece", "mecab-python3", "fugashi", "ipadic", "pyknp", "mojimoji", "sentencepiece"]
mecab = [ "mecab-python3", "fugashi", "ipadic",]
juman = [ "pyknp", "mojimoji",]
sentencepiece = [ "sentencepiece",]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
flake8 = "^3.9.2"
hypothesis = "^6.13.0"

[tool.poetry.dependencies.fugashi]
version = "^1.1.0"
optional = true

[tool.poetry.dependencies.ipadic]
version = "^1.0.0"
optional = true

[tool.poetry.dependencies.mecab-python3]
version = "^1.0.3"
optional = true

[tool.poetry.dependencies.sentencepiece]
version = "^0.1.95"
optional = true

[tool.poetry.dependencies.pyknp]
version = ">=0.4.2,<0.5.0"
optional = true

[tool.poetry.dependencies.mojimoji]
version = "^0.0.11"
optional = true

[tool.poetry.dev-dependencies.sentencepiece]
version = "^0.1.95"

[tool.poetry.dev-dependencies.camphr_test]
path = "../camphr_test"
develop = true

[tool.poetry.plugins.spacy_languages]
ja_juman = "camphr_core.lang.juman:Japanese"
ja_mecab = "camphr_core.lang.mecab:Japanese"
sentencepiece = "camphr_core.lang.sentencepiece:SentencePieceLang"
