[tool.poetry]
name = "camphr_lang"
version = "0.1.0"
description = "Spacy Language class definitions"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
