[tool.poetry]
name = "camphr_lang"
version = "0.1.0"
description = "Spacy Language class definitions"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = ">=2.2,<=2.3.5"
# TODO
camphr_core = { path = "../camphr_core" }
fugashi = { version = "^1.1.0", optional = true }
ipadic = { version = "^1.0.0", optional = true }
mecab-python3 = { version = "^1.0.3", optional = true }
sentencepiece = { version = "^0.1.95", optional = true }
pyknp = { version = ">=0.4.2,<0.5.0", optional = true }
mojimoji = { version = "^0.0.11", optional = true }


[tool.poetry.extras]
all = [ "sentencepiece", "mecab-python3", "fugashi", "ipadic", "pyknp", "mojimoji", "sentencepiece"]
mecab = [ "mecab-python3", "fugashi", "ipadic",]
juman = [ "pyknp", "mojimoji",]
sentencepiece = [ "sentencepiece",]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
flake8 = "^3.9.2"
camphr_test = { path="../camphr_test", develop=true}
hypothesis = "^6.14.0"

[tool.poetry.plugins.spacy_languages]
ja_juman = "camphr_lang.juman:Japanese"
ja_mecab = "camphr_lang.mecab:Japanese"
sentencepiece = "camphr_lang.sentencepiece:SentencePieceLang"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

