[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "camphr_pipelines"
version = "0.1.0"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]

[tool.poetry.dependencies]
python = "^3.7"
toolz = ">=0.10,<0.12"
camphr_transformers = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies.camphr_test]
path = "../camphr_test"
develop = true
