[tool.poetry]
name = "camphr_transformers"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.8"

# TODO: change to published version
camphr = { path = "../../", develop=true}

# Optionals
torch = { version="^1.8.0", optional=true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
